@@ -267,8 +267,10 @@ be set to the preferred literate style."
     ;; (define-key map [?\C-c ?\C-r] 'inferior-haskell-send-region)
     (define-key map [?\C-c ?\C-z] 'switch-to-haskell)
     (define-key map [?\C-c ?\C-l] 'inferior-haskell-load-file)
-    ;; Non standard in other inferior-modes, but traditional in haskell.
-    (define-key map [?\C-c ?\C-r] 'inferior-haskell-reload-file)
+    ;; I think it makes sense to bind inferior-haskell-load-and-run to C-c
+    ;; C-r, but since it used to be bound to `reload' until june 2007, I'm
+    ;; going to leave it out for now.
+    ;; (define-key map [?\C-c ?\C-r] 'inferior-haskell-load-and-run)
     (define-key map [?\C-c ?\C-b] 'switch-to-haskell)
     ;; (define-key map [?\C-c ?\C-s] 'inferior-haskell-start-process)
     ;; That's what M-; is for.
